# experiments

./: Makefile  README.md  bootloader.asm  bootloader.lds
aoc/: Cargo.toml
aoc/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_25.rs  main.rs
blockchain-analysis/: Dockerfile  README.md  compose.yaml  deploy.sh  requirements.txt
blockchain-analysis/app/: main.py
blockchain-analysis/app/api/v1/endpoints/: pool.py
blockchain-analysis/app/middlewares/: logging.py
blockchain-analysis/app/tests/: tests_pool.py
bootloader/: kernel.asm
cache_covert_channel/: Makefile  README.md  message.txt  receiver.c  sender.c
rust_os_dev/: README.md  notes.md
rust_os_dev/ros/: Cargo.toml
rust_os_dev/ros/.cargo/: config
rust_os_dev/ros/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
rust_os_dev/ros/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
rust_os_dev/ros/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
rust_os_dev/ros/tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
