[package]
name = "ros"
version = "0.1.0"
authors = ["Mathieu Dolmen <mathieu.dolmen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort"
